--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@tanstack/react-query": "^5.60.5",
     "@types/connect-redis": "^0.0.23",
     "@types/node": "20.16.11",
+    "@upstash/redis": "^1.34.9",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
