--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/bootstrap.ts",
-    "build": "NODE_OPTIONS=--max-old-space-size=4096 tsc",
-    "start": "npm run build && node dist/index.js",
+    "build": "NODE_OPTIONS=--max-old-space-size=4096 tsc --project tsconfig.json",
+    "start": "npm run build && node ./server/dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "test": "echo \"Error: no test specified\" && exit 1"
