--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx server/bootstrap.ts",
     "build": "NODE_OPTIONS=--max-old-space-size=4096 tsc --project tsconfig.json",
-    "start": "npm run build && node ./server/dist/index.js",
+    "start": "npm run build && node ./dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "test": "echo \"Error: no test specified\" && exit 1"
