fix: update build configuration for proper module resolution and file copying

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,7 +4,11 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "outDir": "./dist/server",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "rootDir": ".",
+    "esModuleInterop": true,
+    "allowJs": true,
+    "resolveJsonModule": true
   },
   "include": ["server/**/*", "shared/**/*"],
   "exclude": ["node_modules", "build", "dist", "**/*.test.ts"]
