--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/bootstrap.ts",
-    "build": "tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && node -e \"require('fs').cpSync('dist/shared', 'dist/server/shared', { recursive: true })\"",
-    "start": "npm run build && node ./dist/server/index.js",
+    "clean": "rm -rf dist",
+    "build": "npm run clean && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && cp -r dist/shared/* dist/server/shared/",
+    "start": "node ./dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "test": "echo \"Error: no test specified\" && exit 1"
