--- a/tsconfig.shared.json
+++ b/tsconfig.shared.json
@@ -4,7 +4,11 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "outDir": "./dist/shared",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "rootDir": ".",
+    "esModuleInterop": true,
+    "allowJs": true,
+    "resolveJsonModule": true
   },
   "include": ["shared/**/*"],
   "exclude": ["node_modules", "build", "dist", "**/*.test.ts"]
