fix: update build configuration for cross-platform compatibility and proper module resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "baseUrl": ".",
+    "rootDir": ".",
+    "allowJs": true,
+    "resolveJsonModule": true,
     "types": ["node", "vite/client"],
     "paths": {
       "@/*": ["./client/src/*"],
