--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/bootstrap.ts",
-    "clean": "rm -rf dist",
-    "build": "npm run clean && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && cp -r dist/shared/* dist/server/shared/",
-    "start": "node ./dist/server/index.js",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && mkdir -p dist/server/shared && cp -r dist/shared/* dist/server/shared/",
+    "start": "npm run build && node ./dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -105,6 +105,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.18.1",
     "drizzle-kit": "^0.30.6",
+    "rimraf": "^5.0.5",
     "tsx": "^4.19.1",
     "typescript": "5.6.3"
   },
