--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "tsx server/bootstrap.ts",
     "clean": "rimraf dist",
-    "build": "npm run clean && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && shx mkdir -p dist/server/shared && shx cp -r dist/shared/* dist/server/shared/",
-    "start": "npm run build && node ./dist/server/index.js",
+    "build": "npm run clean && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && mkdir -p dist/server/shared && cp -r dist/shared/* dist/server/shared/",
+    "build:client": "cd client && npm install && npm run build",
+    "build:server": "npm run clean && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && mkdir -p dist/server/shared && cp -r dist/shared/* dist/server/shared/"
+    "start": "node ./dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "test": "echo \"Error: no test specified\" && exit 1"
