--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: rickortys8
     env: node
-    buildCommand: npm install && npm run build
+    buildCommand: npm install && npm run build:server && npm run build:client
     startCommand: npm run start
     envVars:
       - key: NODE_ENV
@@ -10,4 +10,4 @@ services:
       - key: DATABASE_URL
         sync: false
       - key: RENDER_URL
-        sync: false 
+        sync: false
