--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rm -rf dist && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && mkdir -p dist/server/shared && cp -r dist/shared/* dist/server/shared/",
     "build:client": "cd client && npm install && npm run build",
     "build:server": "rm -rf dist && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && mkdir -p dist/server/shared && cp -r dist/shared/* dist/server/shared/",
-    "start": "node ./dist/server/index.js",
+    "start": "node dist/server/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "test": "echo \"Error: no test specified\" && exit 1"
