Fix: Resolve all TypeScript compilation errors

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -5,7 +5,7 @@
     "moduleResolution": "NodeNext",
     "outDir": "./dist/server",
     "baseUrl": ".",
-    "rootDir": "./server",
+    "rootDir": ".",
     "esModuleInterop": true,
     "allowJs": true,
     "resolveJsonModule": true
