--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: rickortys8
     env: node
-    buildCommand: npm install && npm run build:server && npm run build:client
-    startCommand: npm run start
+    buildCommand: cd .. && npm install && npm run build:server && npm run build:client
+    startCommand: cd .. && npm run start
     envVars:
       - key: NODE_ENV
         value: production
