Fix render.yaml format with proper YAML structure and runtime field

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: rickortys8
-    env: node
+    runtime: node
     buildCommand: npm install && npm run build:server && npm run build:client
     startCommand: node src/dist/server/index.js
     envVars:
