Fix Render startCommand path to use ../dist/server/index.js

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: rickortys8
     runtime: node
     buildCommand: npm install && npm run build:server && npm run build:client
-    startCommand: node src/dist/server/index.js
+    startCommand: node ../dist/server/index.js
     envVars:
       - key: NODE_ENV
         value: production
