Fix import path and build process for Render deployment

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -8,7 +8,8 @@
     "rootDir": ".",
     "esModuleInterop": true,
     "allowJs": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noEmit": false
   },
   "include": ["server/**/*", "shared/**/*"],
   "exclude": ["node_modules", "build", "dist", "**/*.test.ts"]
