--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx server/bootstrap.ts",
+    "dev": "tsx server/simple-index.ts",
     "clean": "rimraf dist",
-    "build": "npm run clean && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && shx mkdir -p dist/server/shared && shx cp -r dist/shared/* dist/server/shared/",
+    "build": "npm run build:client && npm run build:server",
     "build:client": "cd client && npm install && npm run build",
-    "build:server": "npm run clean && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && shx cp dist/server/server/*.js dist/server/ && shx rm -rf dist/server/server && shx mkdir -p dist/server/shared && shx cp -r dist/shared/* dist/server/shared/",
+    "build:server": "npm run clean && tsc --project tsconfig.server.json && tsc --project tsconfig.shared.json && shx cp dist/server/server/simple-index.js dist/server/index.js && shx cp -r dist/shared/* dist/server/",
     "start": "node dist/server/index.js",
+    "simple": "tsx server/simple-index.ts",
     "check": "tsc",
     "db:push": "drizzle-kit push",
     "test": "echo \"Error: no test specified\" && exit 1"
